[gd_scene load_steps=11 format=3 uid="uid://dhasslaqh2xav"]

[ext_resource type="Script" uid="uid://1j56yusd2piv" path="res://Scripts/Shields/States/bubble_shield.gd" id="1_eaq1d"]
[ext_resource type="Texture2D" uid="uid://c3rgpge64kbjc" path="res://Graphics/Shields/bubble_shield.png" id="2_d8ldw"]
[ext_resource type="Texture2D" uid="uid://c6phwbwa3rygl" path="res://Graphics/Shields/bubble_shield_effect.png" id="3_53om0"]
[ext_resource type="AudioStream" uid="uid://cp7n7jv0a25mc" path="res://Audio/Shields/bubble_bounce.wav" id="4_5fw7l"]

[sub_resource type="Animation" id="Animation_2ssd7"]
resource_name = "bounce"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_vhurj"]
resource_name = "bounce_back"
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [3, 2, 1, 0]
}

[sub_resource type="Animation" id="Animation_8lbta"]
resource_name = "default"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bf7vp"]
_data = {
&"bounce": SubResource("Animation_2ssd7"),
&"bounce_back": SubResource("Animation_vhurj"),
&"default": SubResource("Animation_8lbta")
}

[sub_resource type="Animation" id="Animation_xsy8x"]
resource_name = "default"
length = 0.9
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c82ae"]
_data = {
&"default": SubResource("Animation_xsy8x")
}

[node name="BubbleShield" type="Node2D"]
script = ExtResource("1_eaq1d")
invincible = false
action_audio = ExtResource("4_5fw7l")

[node name="ShieldSprite" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.784314)
z_index = 1
texture = ExtResource("2_d8ldw")
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="ShieldSprite"]
libraries = {
&"": SubResource("AnimationLibrary_bf7vp")
}

[node name="EffectSprite" type="Sprite2D" parent="."]
visible = false
self_modulate = Color(1, 1, 1, 0.784314)
z_index = 1
texture = ExtResource("3_53om0")
hframes = 5
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="EffectSprite"]
libraries = {
&"": SubResource("AnimationLibrary_c82ae")
}
speed_scale = 0.5

[connection signal="animation_finished" from="ShieldSprite/AnimationPlayer" to="." method="_on_bubble_bounce_finished"]
